--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>A Digital Analog Clock</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+
+    <link
+      rel="mask-icon"
+      href="favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     <script src="script.js" defer></script>
   </head>
@@ -34,8 +57,8 @@
         <svg
           id="clock"
           xmlns="http://www.w3.org/2000/svg"
-          width="600"
-          height="600"
+          width="900"
+          height="900"
           viewBox="0 0 600 600"
         >
           <g id="face">
